[project]
name = "piary"
version = "0.1.0"
description = "Piary: diary from pictures"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2",
    "google-api-python-client>=2.131.0",
    "google-auth>=2.32.0",
    "google-auth-oauthlib>=1.2.0",
    "jinja2>=3.1.4",
    "numpy>=1.26.4",
    "ollama>=0.3.3",
    "pillow>=10.3.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "scikit-learn>=1.4.2",
    "tqdm>=4.66.4",
]
